# pgkit

./: LICENSE  README.md  pyproject.toml
.github/workflows/: integration-test.yml  python-publish.yml
deployment/: Dockerfile  docker-compose.yml  init.sh  integration-test.py
pgkit/application/: db.py  pg.py  pitr.py  settings.py  utils.py
pgkit/application/models/: __init__.py  master.py  postgres.py  replica.py
pgkit/application/templates/: 10-recovery.conf  11-recovery.conf  12-recovery.conf  13-recovery.conf  14-recovery.conf  15-recovery.conf  9.5-recovery.conf  wal-receive-service.service
pgkit/cli/: cli.py
pgkit/cli/commands/: config.py  list.py  pitr.py  shellx.py  status.py
pgkit/models/: master.py  postgres.py  replica.py
