[tool.poetry]
name = "pgkit"
version = "1.1.2"
description = ""
authors = ["Sadegh Hayeri <hayerisadegh@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
Jinja2 = "^2.11.2"
tinydb = "^4.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
