[tool.poetry]
name = "pgkit"
version = "2.1.2"
description = ""
authors = ["Sadegh Hayeri <hayerisadegh@gmail.com>", "Nima Modares Gorji <nima.mg@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
Jinja2 = "^2.11.2"
tinydb = "^4.3.0"
pytz = "^2021.1"
python-dateutil = "^2.8.1"

[tool.poetry.scripts]
pgkit = "pgkit.cli.cli:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
