[tool.poetry]
name = "pgkit"
version = "2.2.4"
description = ""
authors = [
  "Sadegh Hayeri <hayerisadegh@gmail.com>",
  "Nima Modares Gorji <nima.mg@gmail.com>",
  "Javad Alipanah <javadalipanah@gmail.com>",
  "Parsa Ghorbani <parsa_ghorbani@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
Jinja2 = "3.0.3"
tinydb = "^4.3.0"
pytz = "^2021.1"
python-dateutil = "^2.8.1"
PyYAML = "^6.0"

[tool.poetry.scripts]
pgkit = "pgkit.cli.cli:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
